# wingpanel-indicator-inputmethod

./: README.md  meson.build
.github/workflows/: main.yml
data/: InputMethodIcon.css  inputmethod.appdata.xml.in  inputmethod.gresource.xml
debian/: changelog  control  copyright
po/: POTFILES  README.md  inputmethod-indicator.pot  it.po  it.pot  ja.po  meson.build
po/extra/: POTFILES  extra.pot  it.po  it.pot  ja.po
src/: EngineButton.vala  EngineManager.vala  Indicator.vala  InputMethodIcon.vala  LayoutButton.vala  LayoutsManager.vala
